--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -6,6 +6,24 @@
   <p>
     <%= @movie.description %>
   </p>
+  <h3>Cast</h3>
+  <p>
+    <%= @movie.cast %>
+  </p>
+
+  <h3>Director</h3>
+  <p>
+    <%= @movie.director %>
+  </p>
+
+  <h3>Duration</h3>
+  <p>
+    <%= @movie.duration %>
+  </p>
+
+  <h3>Image</h3>
+    <%= image_tag(@movie.image_file_name) %>
+    
   <h3>Rating</h3>
   <p>
     <%= @movie.rating %>
