--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -22,8 +22,8 @@
   </p>
 
   <h3>Image</h3>
-    <%= image_tag(@movie.image_file_name) %>
-    
+    <%= image_for(@movie) %>
+
   <h3>Rating</h3>
   <p>
     <%= @movie.rating %>
