--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer id="page-footer">
   <p>
     Copyright &copy; 2015
-    <%= link_to 'The Pragmatic Studio', 'http://pragmaticstudio.com' %>
+    <%= link_to 'Catalin Boruga', 'http://catalinboruga.com' %>
   </p>
   <p>
     For educational purposes only.
