--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Flix</title>
+  <title>APP</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
@@ -12,6 +12,8 @@
 
 <div id="wrapper">
 
+  <%= render "layouts/flashes" %> 
+  
   <div id="container">
     <section id="sidebar">
       <%= render "layouts/sidebar" %>
